--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cookie Clicker</title>
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="icon" href="./assets/favicons/favicon.ico" />
 </head>
 
 <body>
